examples/test/testpolicy9782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9782
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key45: value38
      key46: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value3
      podSelector:
        matchLabels:
          key31: value4
          key42: value36
